--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
-    "react": "^19.1.1",
+    "firebase": "^12.6.0",
+    "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.2.3",
     "react-router-dom": "^7.9.6",
     "react-spinners": "^0.17.0"
   },
