Conexion a Firebase + creacion de compras y mensajes de contacto

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lavadero-ecommerce",
-  "homepage": "https://maxdrag0.github.io/react-coder/",
+  "homepage": "https://maxdrag0.github.io/react-coder",
   "private": true,
   "version": "0.0.0",
   "type": "module",
